# qZypper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
Licenses/: Boost.md  D-Bus.md  PolicyKit.md  Polkit-Qt.md  Qt.md  libzypp.md
dbus/: org.presire.qzypper.conf  org.presire.qzypper.service.in
desktop/: org.presire.qzypper.desktop.in
packaging/: rpm-post-install.sh.in  rpm-post-uninstall.sh
polkit/: org.presire.qzypper.policy
selinux/: CMakeLists.txt  qzypper.fc.in  qzypper.if  qzypper.te
src/backend/: CMakeLists.txt  PackageManagerAdaptor.cpp  PackageManagerAdaptor.h  ZyppCallbackReceiver.cpp  ZyppCallbackReceiver.h  ZyppManager.cpp  ZyppManager.h  main.cpp
src/backend/dbus/: org.presire.qzypper.xml
src/common/: CMakeLists.txt  PackageInfo.h  RepoInfo.h  Types.h
src/gui/: CMakeLists.txt  main.cpp
src/gui/controllers/: DBusClient.cpp  DBusClient.h  PackageController.cpp  PackageController.h
src/gui/qml/: Main.qml  Theme.qml
src/gui/qml/components/: RepoPropertiesPanel.qml  RepoTable.qml  UrlTypeSelector.qml
src/gui/qml/dialogs/: AboutQtDialog.qml  AboutqZypperDialog.qml  AddRepoDialog.qml  AddServiceDialog.qml  CommitConfirmDialog.qml  CommitProgressDialog.qml  RepoManagerDrawerContent.qml
translations/: qZypper_ja.ts
